/*
 * SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package holoscan.distributed;

message MultiFragmentPortInfo
{
    message OperatorPortInfo
    {
        optional string operator_name = 1;
        repeated string input_names = 2;
        repeated string output_names = 3;
        repeated string receiver_names = 4;
    }

    message FragmentPortInfo
    {
        optional string fragment_name = 1;
        repeated OperatorPortInfo operators_info = 2;
    }

    repeated FragmentPortInfo targets_info = 1;
}
